--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.9",
+    "@expo/webpack-config": "^0.17.2",
+    "expo": "^47.0.13",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "~0.18.1"
+    "react": "18.1.0",
+    "react-devtools": "^4.22.0",
+    "react-devtools-core": "^4.22.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
